--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^18.2.7",
     "express": "^4.18.2",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
