--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
     "express": "^4.18.2",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^12.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
